Minor css update to fix footer overlap.

--- a/JustPressPlay/Content/css/jppstyle.less
+++ b/JustPressPlay/Content/css/jppstyle.less
@@ -1511,7 +1511,6 @@ textarea {
     min-height: @backgroundGradientLength;
     padding-top: @padding;
     background-color: transparent;
-    //.backgroundGradient();
 
     h3 {
         margin: 0;
@@ -1645,7 +1644,8 @@ textarea {
 
     .item-container {
         // Static -margin to offset Foundation's grids
-        margin-bottom: -20px;
+        // TODO: Resolve
+        //margin-bottom: -20px;
 
         .item {
             position: relative;
